--- a/package.json
+++ b/package.json
@@ -9,19 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.1.6",
+    "@react-email/components": "^0.0.32",
+    "@react-email/render": "^1.0.4",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.59",
+    "@studio-freight/lenis": "^1.0.42",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.474.0",
+    "matter-js": "^0.20.0",
+    "motion": "^12.0.6",
+    "next": "15.1.6",
+    "poly-decomp": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-social-icons": "^6.22.0",
+    "resend": "^4.1.2",
+    "svg-path-commander": "^2.1.8",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
